# iot-server

./: .clang-format  .gitmodules  CMakeLists.txt  README.md  TODOs  install_service  iotserver.service  loc_counter
doc/: deviceInterface.md
src/: CMakeLists.txt  main.cpp
src/message/: CMakeLists.txt  crc.hpp  endian.hpp  message.cpp  message.hpp
src/node/: CMakeLists.txt  node.cpp  node.hpp  nodeInterface.cpp  nodeInterface.hpp  nodeList.cpp  nodeList.hpp
src/server/: CMakeLists.txt  server.cpp  server.hpp  serverNode.cpp  serverNode.hpp  serverNodeInterfaceJson.hpp
src/server/database/: CMakeLists.txt
src/simulator/: CMakeLists.txt  testAppNode.cpp  testAppNode.hpp  testNode.cpp  testNode.hpp
src/utilities/: CMakeLists.txt  dnsUpdater.cpp  dnsUpdater.hpp  logger.cpp  logger.hpp
